--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-    --color-primary: White;
+    --color-primary: rgb(171, 44, 221);
     --color-primary-dark: rgb(78, 3, 78);
     --color-secondary: rgb(182, 12, 182);
     --color-error: red;
@@ -19,6 +19,8 @@ body {
 
 .form__title {
     color:blueviolet;
+    margin-bottom: 2rem;
+    text-align: center;
 }
 
 .form__link{
@@ -38,5 +40,94 @@ body {
 .container,
 .form__input,
 .form__button {
-    font: 500 1rem 'Qicksand', san-serif;
+    font-family: 400 1rem 'Aboreto', cursive;
+}
+
+.form--hidden {
+    display: none;
+}
+
+.form > *:first-child {
+    margin-top: 0;
+}
+
+.form > *:last-child {
+    margin-bottom: 0;
+}
+
+.form__message {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.form__message--success {
+    color: var(--color-success);
+}
+
+.form__message--error {
+    color: var(--color-error);
+    border-color: var(--color-error);
+}
+
+.form__input-group {
+    margin-bottom: 1rem;
+
+}
+
+.form__input {
+    display: block;
+    width: 100%;
+    padding: 0.75rem;
+    box-sizing: border-box;
+    border-radius: var(--border-radius);
+    border: 1px, solid #72dd33;
+    outline: none;
+    background: #f7db5e;
+    transition: background 0.2s, border-color 0.2s;
+}
+
+.form__input:focus {
+    border-color: var(--color-primary);
+
+}
+
+.form__input-error-message {
+    margin-top: 0.5rem;
+    font-size: 0.85rem;
+    color: var(--color-error);
+}
+
+.form__button {
+    width: 100%;
+    padding: 1rem 2rem;
+    font-weight: bold;
+    font-size: 1.1rem;
+    color:purple;
+    border: none;
+    border-radius: var(--border-radius);
+    outline: none;
+    cursor: pointer;
+    background: var(--color-secondary);
+}
+
+.form__button:hover {
+    background: var(--color-primary-dark);
+}
+
+.form__button:active {
+    transform: scale(0.98);
+}
+
+.form__text {
+    text-align: center;
+}
+
+.form__link {
+    color: var(--color-primary);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.form__link:hover {
+    text-decoration: underline;
 }
